# GAN

./: .gitignore  README.md  pyproject.toml
src/gans/: __main__.py  data.py  self_data.py
src/model/: model.py
