[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gan"
version = "0.0.1"
readme = "README.md"

requires-python = ">=3.8"

dependencies = [
    "dotenv==0.9.9",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.6.1",
    "torch==2.6.0"
]
description = "GAN architecture for non-image datasets"

[project.scripts]
gans = "gans.__main__:main"
split = "gans.__main__:data"

[project.urls]
Homepage = "https://github.com/SeanS-code/GAN"
